Replace 'new Integer/Double/Long' by Integer/Double/Long.valueOf
This constructor is deprecated since Java 9